# armadito-mod-yara

./: .gitignore  .travis.yml  README.md  configure.ac
conf/: Makefile.am  yara.conf.in
src/: Makefile.am  yaramod.c
